# sqlx-rust-examples

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20240414170353_team.sql  20240414170356_player.sql
src/: main.rs
src/models/: mod.rs  player.rs  team.rs
src/repository/: db.rs  mod.rs  player_repository.rs  team_repository.rs
