[package]
name = "sql_lernen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio"] }
tokio = { version = "1.37", features = ["full"] }